Convert FieldContentFormatter to NormalizeWhitespaceFormatter
Co-authored-by: Christoph <siedlerkiller@gmail.com>